@@ -1,4 +1,5 @@
 07/02/2010
+- preserve line endings type form template source
 - API changes (see README file)
 
 05/02/2010
